--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ body {
     padding: 0;
     margin: 0;
   }
+  .nav-links a{
+    text-decoration: none;
+    color: inherit;
+  }
+  .nav-links a:hover{
+    color: #c49a6c;
+  }
+  
   
   .nav-links li {
     cursor: pointer;
@@ -42,6 +50,10 @@ body {
     font-weight: bold;
     cursor: pointer;
     color: #000000;
+  }
+  .login-btn a{
+    text-decoration: none;
+    color: inherit;
   }
 
   .filters {
