--- a/style.css
+++ b/style.css
@@ -127,24 +127,47 @@ body {
   
   .regular-btn {
     align-self: flex-start;
-    padding: 8px 16px;
+    padding: 1rem 2rem;
     background-color: #ffffff;
     color: #000000;
-    border: 1px solid #D9D9D9;
+    font-size:1rem;
+    border: 1px solid #768A75;
     border-radius: 4px;
+    font-size: 1.125rem;
+    font-weight: 500; 
     cursor: pointer;
+  }
+
+  .products-wrapper {
+    position: relative;
+    padding-bottom: 10rem;
   }
 
   .products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 24px;
-    padding: 32px;
+    gap: 2rem;
+    padding: 2rem;
+    position: relative;
+    z-index: 1;
+    width: 90%;
+    margin: 0 auto; 
+  }
+
+  .coffee-particle-bg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 400px; /* adjust as needed */
+    opacity: 1;
+    z-index: 0;
+    pointer-events: none;
   }
   
   @media (min-width: 768px) {
     .products {
       grid-template-columns: repeat(2, 1fr);
+      gap: 2.5rem;
     }
     form.dropdowns {
         flex-direction: row;
@@ -158,27 +181,43 @@ body {
   @media (min-width: 1024px) {
     .products {
       grid-template-columns: repeat(4, 1fr);
+      gap: 3rem;
     }
   }
   
   .product {
     text-align: center;
     padding: 16px;
-    border: 1px solid #F2F2F2;
-    border-radius: 8px;
+    border: 1px solid #ccc; /* lighter gray */
+    border-radius: 12px;
     background-color: #ffffff;
     transition: transform 0.2s;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   }
-  
+
+  .product img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 12px;
+  }
+
+  .product p {
+    font-size: 16px;
+    font-weight: 600;
+    color: #222;
+    margin: 0;
+    margin-bottom: 8px;
+  }
+
+  .product span {
+    font-size: 16px;
+    color: #606F5F;
+    font-weight: 500;
+  }
+
   .product:hover {
     transform: translateY(-4px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .product img {
-    width: 100px;
-    height: auto;
-    margin-bottom: 8px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   }
   
   .product.sold-out {
@@ -208,6 +247,7 @@ body {
     padding: 8px;
     border-radius: 12px;
     cursor: pointer;
+    z-index: 2;
   }
   
   .cart-icon img {
