--- a/style.css
+++ b/style.css
@@ -281,4 +281,116 @@ body {
     display: block;
     height: auto;
   }
-  
+
+  h2{
+    font-size: 36px; 
+    font-weight: bold; 
+    margin: 20px 0; 
+    color: #333; 
+  }
+  .cart-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 15px;
+    background-color: #f9f9f9; 
+    border-radius: 8px; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.quantity-control {
+    display: flex;
+    align-items: center;
+    gap: 12px; 
+}
+
+.quantity-control button {
+    width: 45px; 
+    height: 45px; 
+    font-size: 22px; 
+    border-radius: 8px; 
+    background: #ddd;
+    cursor: pointer;
+}
+
+.quantity-control input {
+    width: 70px; 
+    height: 45px; 
+    font-size: 20px; 
+    text-align: center;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+}
+
+.delete-item {
+  background-color: #f44336; 
+  border: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px; 
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease; 
+}
+
+.delete-item:hover {
+  background-color: #d32f2f; 
+  transform: scale(1.1); 
+}
+
+.delete-item img {
+  width: 1200px; 
+  height: 30px;
+  filter: invert(1); 
+}
+
+
+.cart-item img {
+    max-width: 20%;
+    height: auto;
+    margin-bottom: 8px;
+}
+
+.cart-container {
+  display: flex; 
+  flex-direction: column; 
+  gap: 10px; 
+  padding: 0;
+}
+
+
+.actions {
+  display: flex;
+  justify-content: space-around; 
+  align-items: center; 
+  margin-top: 15px; 
+  padding: 0 20px; 
+  gap: 5px; 
+}
+
+.actions select, .actions button {
+    font-size: 18px; 
+    padding: 12px 20px; 
+    height: 45px; 
+    border-radius: 5px; 
+}
+
+.actions p {
+    font-size: 20px; 
+    font-weight: bold;
+}
+
+
+.btn {
+  background-color: white;
+  color: black; 
+  padding: 10px 15px;
+  border: 2px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px;
+}
+.btn:hover{
+  border: rgba(162, 86, 45, 0.5);
+  background-color: rgba(162, 86, 45, 0.28);
+  color: rgba(162, 86, 45, 1);
+}
