--- a/style.css
+++ b/style.css
@@ -143,6 +143,15 @@ body {
     padding-bottom: 10rem;
   }
 
+  .products-wrapper > h2 {
+      font-size: 2rem;
+      font-weight: bold;
+      text-align: left;
+      color: #333;  
+      width: 90%;
+      margin: 1.5rem auto;
+  }
+
   .products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
