homepage heading warning fixed

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ body {
     margin-bottom: 12px;
   }
 
-  .product p {
+  .product h3 {
     font-size: 16px;
     font-weight: 600;
     color: #222;
