--- a/ori web/main.css
+++ b/ori web/main.css
@@ -77,7 +77,7 @@ button:hover {
     border: 8px solid #ffefdb;
     box-shadow: 0 0 0 12px #352a22;
     border-radius: 10px 10px 60px 75px;
-    background: url('../images/coffee.png');
+    background: url('../ori web/images/coffee.png');
     background-repeat: repeat-x;
     background-position: 0 130px;
     animation: filling 4s infinite;
