--- a/ori web/menu.css
+++ b/ori web/menu.css
@@ -181,6 +181,68 @@ button:hover {
     font-weight: bold;
 }
 
+/*filter*/
+
+
+.filters {
+    padding: 24px 32px;
+    border-bottom: 1px solid #F2F2F2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+
+  form.dropdowns {
+    display: flex;
+    flex-direction: row; 
+    gap: 26px;
+    width: 100%;
+    max-width: 100%;
+    padding-top: 50px;
+    justify-content: center; 
+  }
+  
+  form.dropdowns label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto; 
+  }
+  
+  form.dropdowns select {
+    width: auto; 
+    min-width: 500px; 
+    padding: 12px 16px;
+    font-size: 1rem;
+    border: 1px solid #606F5F;
+    border-radius: 6px;
+    background-color: #ffffff;
+    color: #000000;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('data:image/svg+xml;utf8,<svg fill=\"%23606F5F\" height=\"24\" viewBox=\"0 0 24 24\" width=\"24\" xmlns=\"http://www.w3.org/2000/svg\"><path d=\"M7 10l5 5 5-5z\"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+    background-size: 16px;
+  }
+  /*reorder*/
+  #reorder-btn {
+    display: inline-block;
+    min-width: 180px; 
+    padding: 8px 12px;
+    background-color: #606F5F;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+#reorder-btn:hover {
+    background-color: #4e5c4d;
+}
 
 /* Footer styling */
 footer {
@@ -293,63 +355,4 @@ footer {
     .menu-section {
         grid-template-columns: 1fr;
     }
-}
-
-.filters {
-    padding: 24px 32px;
-    border-bottom: 1px solid #F2F2F2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
-  }
-
-  form.dropdowns {
-    display: flex;
-    flex-direction: row; 
-    gap: 26px;
-    width: 100%;
-    max-width: 100%;
-    padding-top: 50px;
-    justify-content: center; 
-  }
-  
-  form.dropdowns label {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: auto; 
-  }
-  
-  form.dropdowns select {
-    width: auto; 
-    min-width: 500px; 
-    padding: 12px 16px;
-    font-size: 1rem;
-    border: 1px solid #606F5F;
-    border-radius: 6px;
-    background-color: #ffffff;
-    color: #000000;
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url('data:image/svg+xml;utf8,<svg fill=\"%23606F5F\" height=\"24\" viewBox=\"0 0 24 24\" width=\"24\" xmlns=\"http://www.w3.org/2000/svg\"><path d=\"M7 10l5 5 5-5z\"/></svg>');
-    background-repeat: no-repeat;
-    background-position: right 12px center;
-    background-size: 16px;
-  }
-  #reorder-btn {
-    display: inline-block;
-    min-width: 180px; 
-    padding: 8px 12px;
-    background-color: #606F5F;
-    color: white;
-    text-decoration: none;
-    border-radius: 4px;
-    font-weight: 500;
-    margin-right: 10px;
-}
-
-#reorder-btn:hover {
-    background-color: #4e5c4d;
 }
