--- a/v2/item-comp.css
+++ b/v2/item-comp.css
@@ -71,16 +71,20 @@ button:hover {
 
 
 .item-image {
-    flex: 1;
-    position: relative;
-    min-height: 250px;
+    width: 100%;
+    max-width: 600px;     
+    margin: 0 auto;        
+    overflow: hidden;
+    border-radius: 12px;
 }
 
 .item-image img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;           
+    display: block;
+    object-fit: contain;    
 }
+
 
 .steam-effect {
     position: absolute;
