--- a/main.css
+++ b/main.css
@@ -111,7 +111,7 @@ button:hover {
     margin-top: 30px;
 }
 
-/* Coffee Animation with updated colors */
+/* Coffee Cup Animation */
 .cup {
     position: relative;
     width: 220px;
